Align center corrected

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -481,7 +481,3 @@ a:hover, a:focus, a:active {
     height: 75vh;
   }
 }
-
-.bottomcenter {
-  left: 120px;
-}
